--- a/Hello_World/index.html
+++ b/Hello_World/index.html
@@ -47,7 +47,7 @@ function closeNav() {
 		<a href="http://www.andyhoppe.com/" title="Besucherzähler"><img 
 src="//c.andyhoppe.com/1581861079" style="border:none" alt="Besucherzähler" /></a>
 <!--		<h2>Account erstellen</h2>
-		<form action="mailto:##mail##?subject=Kontakt erstellt!" method="post" enctype="text/plain" method="post" id="createAccount">
+		<form action="signedIn.html" method="post" enctype="text/plain" method="post" id="createAccount">
 			<fieldset>
 				<legend>Informationen</legend>
 				Benutzername: <input type="text" name="name" required/>
