php-tag korrigiert

--- a/Hello_World/signedIn.html
+++ b/Hello_World/signedIn.html
@@ -6,13 +6,13 @@
 		<link rel="stylesheet" href="../style.css" type="text/css" />
 	</head>
 	<body>
-		<!-- <?php>
+		<!-- <?php
 			$to = "##mail##";
 			$title = "Dein Account wurde erstellt";
 			$from = "Absender: linus.warnatz@icloud.com";
 			$text = "Hallo ##name##, \n dein Account wurde erfolgreich erstellt"
 			mail($to, $title, $text, $from);
-		<?> -->
+		?> -->
 		 Dein Account wurde erfolgreich erstellt!
 		 <a href="index.html">Zurück</a>
 		<script src="mail.php" type="text/php"></script>
