Anmeldeformular nicht mehr auskommentiert

--- a/Hello_World/index.html
+++ b/Hello_World/index.html
@@ -46,7 +46,7 @@ function closeNav() {
 		<!--  1581861079 pwd:   -->
 		<a href="http://www.andyhoppe.com/" title="Besucherzähler"><img 
 src="//c.andyhoppe.com/1581861079" style="border:none" alt="Besucherzähler" /></a>
-<!--		<h2>Account erstellen</h2>
+		<h2>Account erstellen</h2>
 		<form action="signedIn.html" method="post" enctype="text/plain" method="post" id="createAccount">
 			<fieldset>
 				<legend>Informationen</legend>
@@ -68,7 +68,7 @@ src="//c.andyhoppe.com/1581861079" style="border:none" alt="Besucherzähler" /><
 			Benutzername: <input type="text" name="loggedInUsername" /> oder E-Mail-Adresse: <input type="text" name="loggedInUserMailAdress" /><br />
 			Passwort: <input type="password" name="loggedInUserPassword" />
 			<input type="submit" name="login" value="Einloggen"/>
-		</form> -->
+		</form>
 		
 		<h2>Videos</h2>
 		<h3>HOW NOT TO LAND AN ORBITAL BOOSTER</h3>
