--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 <h1>HTML 404 - Seite nicht gefunden</h1>
-Hallo Besucher! Octocat hat schon ganz GitHub durchsucht aber konnte die angeforderte Seite leider nicht finden
+Hallo Besucher! Octocat hat schon ganz GitHub durchsucht,, aber konnte die angeforderte Seite leider nicht finden, <br>
 Auf der <a href="index.html">Hauptseite</a> gibt es aber Links zu allen unseren Seiten.
 <hr>
 <h1>HTML 404 - Page not found</h1>
-Hello visitor! Octocat has already searched all of GitHub but could not find the requested page
+Hello visitor! Octocat has already searched all of GitHub, but could not find the requested page. <br>
 Visit our <a href="index.html">main page</a>, there are links to all of our pages.
 <hr>
 <h1>HTML 404 - Page non trouvée</h1>
-Bonjour visiteur! Octocat a déjà recherché tout GitHub mais n'a pas pu trouver la page demandée
+Bonjour visiteur! Octocat a déjà recherché tout GitHub, mais n'a pas pu trouver la page demandée. <br>
 Sur la <a href="index.html">page principale</a>, vous trouverez des liens vers toutes nos pages.
