--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <h1>HTML 404 - Seite nicht gefunden</h1>
-Hallo Besucher! Octocat hat schon ganz GitHub durchsucht,, aber konnte die angeforderte Seite leider nicht finden, <br>
+Hallo Besucher! Octocat hat schon ganz GitHub durchsucht, aber konnte die angeforderte Seite leider nicht finden, <br>
 Auf der <a href="index.html">Hauptseite</a> gibt es aber Links zu allen unseren Seiten.
 <hr>
 <h1>HTML 404 - Page not found</h1>
