bild in 404 eingefügt

--- a/404.html
+++ b/404.html
@@ -1,3 +1,4 @@
+<img src="https://octodex.github.com/images/inspectocat.jpg" width="420" height="500" >
 <h1>HTML 404 - Seite nicht gefunden</h1>
 Hallo Besucher! Octocat hat schon ganz GitHub durchsucht, aber konnte die angeforderte Seite leider nicht finden, <br>
 Auf der <a href="index.html">Hauptseite</a> gibt es aber Links zu allen unseren Seiten.
