eiOS.sb3 auskommentiert (scratch.html)

--- a/scratch.html
+++ b/scratch.html
@@ -34,8 +34,10 @@ function closeNav() {
   document.body.style.backgroundColor = "white";
 }
 </script>
-	<h1>Scratch-Projekte von <a href="//www.scratch.mit.edu/users/minutix">minutix</a></h1>
-	<h2>eiOS</h2>
-	<iframe src="https://scratch.mit.edu/projects/394819202/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+	<h1>Scratch-Projekte von <a href="https://www.scratch.mit.edu/users/minutix">minutix</a></h1>
+  <h2>eiOS</h2>
+  eiOS wird gerade aktualisiert <br>
+  <a href="https://www.bing.com/images/search?view=detailV2&ccid=%2bnveOWGM&id=52BD9276753F6C24A501F80BFB24E9E47EA1D485&thid=OIP.-nveOWGMmGQKXmvmJCz8LQAAAA&mediaurl=https%3a%2f%2fs3.amazonaws.com%2fimages.seroundtable.com%2fgoogle-updating-1371646685.gif&exph=240&expw=240&q=update+gif&simid=607997305595039262&ck=47A5D08B97E0DFB5623177CD7B28CA98&selectedIndex=0&FORM=IRPRST&ajaxhist=0"><img src="https://s3.amazonaws.com/images.seroundtable.com/google-updating-1371646685.gif" width="240" height="240" alt='Zwei sich im Kreis drehende Pfeile, Schriftzug "UPDATE", der Hintergrund wechselt die Farbe'></a>
+<!--	<iframe src="https://scratch.mit.edu/projects/394819202/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe> -->
 </body>
 </html>
