--- a/scratch.html
+++ b/scratch.html
@@ -10,7 +10,7 @@
 <body>
 			<div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">> Suche</a>
+  <a href="#">Suche</a>
   <a href="Hello_World/index.html">Videos &amp; Co.</a>
   <!-- <a href="#">Geocaching</a> -->
   <a href="photos/index.html">Fotoalbum</a>
