--- a/Hello_World/index.html
+++ b/Hello_World/index.html
@@ -6,6 +6,11 @@
 		<meta author="Linus Benjamin Warnatz">
 		<link rel="stylesheet" href="../style.css" type="text/css" />
 		<link rel="stylesheet" href="../bar.css" type="text/css" />
+		<style>
+			body {
+				!important background-image: url("/hntgrd/Kachel1.jpg");
+			}
+		</style>
 	</head>
 	<body>
 <div id="mySidenav" class="sidenav">
@@ -31,6 +36,7 @@ function openNav() {
 function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
   document.getElementById("main").style.marginLeft= "0";
+
   document.body.style.backgroundColor = "white";
 }
 </script>
