--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 	</style>
 </head>
 <body>
+	<div id="header">
+		<h1>⚠ VERALTET ⚠</h1>
+		Dieses Repository wird nicht mehr gepflegt und durch <a href="https://www.github.om/libewa/libewa.github.io">libewa/libewa.github.io</a> ersetzt. Die neue Addresse ist <a href="https://www.libewa.github.io">libewa.github.io</a>. <br>
+		<a href="https://github.com/libewa/www/issues/3" hreflang="en_US">Hier</a> ist die offizielle Bekanntmachung.
+	</div>
 	<h1>Startseite</h1>
 	<a href="search.html">Suche mit der blinden Kuh</a>
 	<a href="photos/index.html">Fotoalbum</a>
